modal jspf files added to webinf/includes folder for easier consistent modal retrieval and control.
Removed code for stripe id. must fix